--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "~8.2.13",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
+    "node-random-name": "^1.0.1",
+    "random-number-in-range": "^1.0.2",
     "random-words": "^1.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
