--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "node-random-name": "^1.0.1",
     "random-number-in-range": "^1.0.2",
     "random-words": "^1.1.0",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
