--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@angular/common": "~8.2.13",
     "@angular/compiler": "~8.2.13",
     "@angular/core": "~8.2.13",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~8.2.13",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.14.2",
     "hammerjs": "^2.0.8",
     "node-random-name": "^1.0.1",
     "random-number-in-range": "^1.0.2",
